--- a/mediaMicroservices/docker-compose-swarm.yml
+++ b/mediaMicroservices/docker-compose-swarm.yml
@@ -1,115 +1,175 @@
 version: "3"
 services:
+#   Enables resolving container hostnames from host machine
   dns-media:
-    image: defreitas/dns-proxy-server
+    image: defreitas/dns-proxy-server:2.19.0-arm8x64
     volumes:
       - /opt/dns-proxy-server/conf:/app/conf
       - /var/run/docker.sock:/var/run/docker.sock
       - /etc/resolv.conf:/etc/resolv.conf
 
   unique-id-service:
-    image: yg397/media-microservices
+    image: mjgiardino/media-microservices:xenial
     hostname: unique-id-service
+    ports:
+      - 10001:9090
     restart: always
     entrypoint: UniqueIdService
+    depends_on:
+      - nginx-web-server
 
   movie-id-service:
-    image: yg397/media-microservices
+    image: mjgiardino/media-microservices:xenial
     hostname: movie-id-service
+#    ports:
+#      - 10002:9090
     restart: always
     entrypoint: MovieIdService
+    depends_on:
+      - nginx-web-server    
 
   movie-id-mongodb:
     image: mongo:4.4.6
     hostname: movie-id-mongodb
+#    ports:
+#      - 27018:27017
     restart: always
 
   movie-id-memcached:
     image: memcached
     hostname: movie-id-memcached
+#    ports:
+#      - 11212:11211
     restart: always
 
   text-service:
-    image: yg397/media-microservices
+    image: mjgiardino/media-microservices:xenial
     hostname: text-service
+#    ports:
+#      - 10003:9090
     restart: always
     entrypoint: TextService
+    depends_on:
+      - nginx-web-server      
 
   rating-service:
-    image: yg397/media-microservices
+    image: mjgiardino/media-microservices:xenial
     hostname: rating-service
+#    ports:
+#      - 10004:9090
     restart: always
     entrypoint: RatingService
+    depends_on:
+      - movie-id-service
 
   rating-redis:
     image: redis
     hostname: rating-redis
+#    ports:
+#      - 6382:6379
     restart: always
 
   user-service:
-    image: yg397/media-microservices
+    image: mjgiardino/media-microservices:xenial
     hostname: user-service
+#    ports:
+#      - 10005:9090
     restart: always
     entrypoint: UserService
+    depends_on:
+      - nginx-web-server
 
   user-mongodb:
     image: mongo:4.4.6
     hostname: user-mongodb
+#    ports:
+#      - 27019:27017
     restart: always
 
   user-memcached:
     image: memcached
     hostname: user-memcached
+#    ports:
+#      - 11213:11211
     restart: always
 
   compose-review-service:
-    image: yg397/media-microservices
+    image: mjgiardino/media-microservices:xenial
     hostname: compose-review-service
+    ports:
+      - 10006:9090
     restart: always
     entrypoint: ComposeReviewService
+    depends_on:
+      - movie-id-service
+      - rating-service
+      - unique-id-service
+      - user-service
+      - text-service
 
   compose-review-memcached:
     image: memcached
     hostname: compose-review-memcached
+#    ports:
+#      - 11214:11211
     restart: always
 
   review-storage-service:
-    image: yg397/media-microservices
+    image: mjgiardino/media-microservices:xenial
     hostname: review-storage-service
+#    ports:
+#      - 10007:9090
     restart: always
     entrypoint: ReviewStorageService
+    depends_on:
+      - compose-review-service
 
   review-storage-mongodb:
     image: mongo:4.4.6
     hostname: review-storage-mongodb
+#    ports:
+#      - 27020:27017
     restart: always
 
   review-storage-memcached:
     image: memcached
     hostname: review-storage-memcached
+#    ports:
+#      - 11215:11211
     restart: always
 
   user-review-service:
-    image: yg397/media-microservices
+    image: mjgiardino/media-microservices:xenial
     hostname: user-review-service
+#    ports:
+#      - 10008:9090
     restart: always
     entrypoint: UserReviewService
-
+    depends_on:
+      - compose-review-service
   user-review-mongodb:
     image: mongo:4.4.6
     hostname: user-review-mongodb
+#    ports:
+#      - 27021:27017
     restart: always
 
   user-review-redis:
     image: redis
     hostname: user-review-redis
+#    ports:
+#      - 6381:6379
     restart: always
 
   movie-review-service:
-    image: yg397/media-microservices
+    image: mjgiardino/media-microservices:xenial
     hostname: movie-review-service
+#    ports:
+#      - 10009:9090
     restart: always
     entrypoint: MovieReviewService
+    depends_on:
+      - compose-review-service
 
   movie-review-mongodb:
     image: mongo:4.4.6
@@ -121,31 +181,39 @@ services:
   movie-review-redis:
     image: redis
     hostname: movie-review-redis
+#    ports:
+#      - 6380:6379
     restart: always
 
   nginx-web-server:
-    image: yg397/openresty-thrift:xenial
+    image: mjgiardino/openresty-thrift:xenial
     hostname: nginx-thrift
     ports:
       - 8080:8080
     restart: always
     volumes:
-      - ./nginx-web-server/lua-scripts:/usr/local/openresty/nginx/lua-scripts
-      - ./nginx-web-server/conf/nginx.conf:/usr/local/openresty/nginx/conf/nginx.conf
-      - ./nginx-web-server/jaeger-config.json:/usr/local/openresty/nginx/jaeger-config.json
-      - ./gen-lua:/gen-lua
+      - /home/phablet/DeathStarBench/mediaMicroservices/nginx-web-server/lua-scripts:/usr/local/openresty/nginx/lua-scripts
+      - /home/phablet/DeathStarBench/mediaMicroservices/nginx-web-server/conf/nginx.conf:/usr/local/openresty/nginx/conf/nginx.conf
+      - /home/phablet/DeathStarBench/mediaMicroservices/nginx-web-server/jaeger-config.json:/usr/local/openresty/nginx/jaeger-config.json
+      - /home/phablet/DeathStarBench/mediaMicroservices/gen-lua:/gen-lua
     deploy:
       replicas: 1
 
   cast-info-service:
-    image: yg397/media-microservices
+    image: mjgiardino/media-microservices:xenial
     hostname: cast-info-service
+#    ports:
+#      - 10010:9090
     restart: always
     entrypoint: CastInfoService
+    depends_on:
+      - nginx-web-server
 
   cast-info-mongodb:
     image: mongo:4.4.6
     hostname: cast-info-mongodb
+#    ports:
+#      - 27024:27017
     restart: always
 
   cast-info-memcached:
@@ -156,12 +224,14 @@ services:
     restart: always
 
   plot-service:
-    image: yg397/media-microservices
+    image: mjgiardino/media-microservices:xenial
     hostname: plot-service
 #    ports:
 #      - 10011:9090
     restart: always
     entrypoint: PlotService
+    depends_on:
+      - nginx-web-server
 
   plot-mongodb:
     image: mongo:4.4.6
@@ -178,12 +248,14 @@ services:
     restart: always
 
   movie-info-service:
-    image: yg397/media-microservices
+    image: mjgiardino/media-microservices:xenial
     hostname: movie-info-service
 #    ports:
 #      - 10012:9090
     restart: always
     entrypoint: MovieInfoService
+    depends_on:
+      - nginx-web-server
 
   movie-info-mongodb:
     image: mongo:4.4.6
